# finance-demo

./: .gitignore  README.md  dashboard.py  fred_dashboard_20260308.html  main.py  pyproject.toml
.claude/skills/fred-dashboard/: SKILL.md
.claude/skills/fred-dashboard/scripts/: generate_dashboard.py
.claude/skills/fred-lending-risk/: SKILL.md
.claude/skills/fred-lending-risk/scripts/: analyze.py
.claude/skills/fred-macro/: SKILL.md
tests/: conftest.py  test_dashboard.py  test_main.py
