[project]
name = "fin-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2,<3",
    "plotly>=6.0",
    "requests>=2.32",
    "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
